public/css/index.css
/* Inconsolata Variable font */
/* inconsolata-latin-wght-normal */
@font-face {
	font-family: 'Inconsolata Variable';
	font-style: normal;
	font-display: swap;
	font-weight: 200 900;
	font-stretch: 50% 200%;
	src: url(/fonts/inconsolata/inconsolata-latin-wdth-normal.woff2) format('woff2-variations');
	unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
  }

/* Defaults */
:root {
	--font-family: "Inconsolata Variable", -apple-system, system-ui, sans-serif;
	--font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
}

/* Theme colors */
:root {
	--color-gray-20: #6a6a6a;
	--color-gray-50: #666;
	--color-gray-90: #333;

	--background-color: #f3f3f3;
	--background-color-overlay: #F8E3E2cc;

	--text-color: var(--color-gray-90);

	--text-color-link: #C2302B;
	--text-color-link-active: #C2302B;
	--text-color-link-visited: #8B24DA;

	color-scheme: var(--color-scheme, light);

	--syntax-tab-size: 2;

	--size-body-text: 18px;
}

@media (prefers-color-scheme: dark) {
	:root {
		--color-scheme: dark;
		--color-gray-20: #acacac;
		--color-gray-50: #C0C0C0;
		--color-gray-90: #dad8d8;

		/* --text-color is assigned to --color-gray-_ above */
		--text-color-link: #FF8984;
		--text-color-link-active: #FF8984;
		--text-color-link-visited: #C5A6F8;

		--background-color: #202122;
		--background-color-overlay: #2b2b2bcc;
	}
}


/* Global stylesheet */
* {
	box-sizing: border-box;
}

@view-transition {
	navigation: auto;
}

html,
body {
	padding: 0;
	margin: 0 auto;
	font-family: var(--font-family);
	font-synthesis: weight;
	font-size: var(--size-body-text);
	color: var(--text-color);
	background-color: var(--background-color);
}
html {
	overflow-y: scroll;
}
body {
	max-width: 44em;
	font-variation-settings:
		"wdth" 100;
}
h1,h2,h3,h4,h5,h6 {
	font-family: var(--font-family);
	font-style: normal;
	font-weight: 900;
	font-width: expanded;
	font-stretch: expanded;
	line-height: 100%;
	font-variation-settings:
    	"wdth" 112.5;
}

/* https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden {
	clip: rect(0 0 0 0);
	clip-path: inset(50%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

/* Fluid images via https://www.zachleat.com/web/fluid-images/ */
img{
  max-width: 100%;
}
img[width][height] {
  height: auto;
}
img[src$=".svg"] {
  width: 100%;
  height: auto;
  max-width: none;
}
video,
iframe {
	width: 100%;
	height: auto;
}
iframe {
	aspect-ratio: 16/9;
}

p:last-child {
	margin-bottom: 0;
}
p {
	line-height: 200%;
}

/* selects the paragraphs that come after a heading or at the end of the post */
p:has(+ h2), 
p:has(+ h3), 
p:has(+ h4), 
p:has(+ h5),
p:has(+ h6),
p:has(+ .links-nextprev) {
	margin-bottom: 2.5rem;
}

li {
	line-height: 200%;
}

/* add margin after the last item of every list, except for nav */
li:not(ul.nav li):not(ul.post-metadata li):last-child {
	margin-bottom: 1rem;
}

a[href] {
	color: var(--text-color-link);
}
a[href]:not(:hover) {
	text-decoration: none;
}
a[href]:visited {
	color: var(--text-color-link-visited);
}
a[href]:hover,
a[href]:active {
	color: var(--text-color-link-active);
	text-decoration: underline;
}

main,
footer {
	padding: 1rem;
}
main :first-child {
	margin-top: 0;
}

header {
	border-bottom: 1px dashed var(--color-gray-20);
}

footer {
	text-align: center;
}

.links-nextprev {
	display: flex;
	justify-content: space-between;
	gap: .5em 1em;
	list-style: "";
	border-top: 1px dashed var(--color-gray-20);
	padding: 1em 0;
}
.links-nextprev > * {
	flex-grow: 1;
}
.links-nextprev-next {
	text-align: right;
}

table {
	margin: 1em 0;
}
table td,
table th {
	padding-right: 1em;
}

pre,
code {
	font-family: var(--font-family-monospace);
}
pre:not([class*="language-"]) {
	margin: .5em 0;
	line-height: 140%;
	-moz-tab-size: var(--syntax-tab-size);
	-o-tab-size: var(--syntax-tab-size);
	tab-size: var(--syntax-tab-size);
	-webkit-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	overflow-x: auto;
}
code {
	word-break: break-all;
}

em {
	font-style: normal;
	font-weight: 700;
	font-variation-settings:
    	"wdth" 112.5;
}

/* Header */
header {
	display: flex;
	gap: 1em;
	flex-wrap: wrap;
	justify-content: space-between;
	align-items: center;
	padding: 1em;
}
.home-link {
	flex-grow: 1;
	font-size: 1em;
	font-weight: 700;
	font-width: expanded;
	font-stretch: expanded;
	font-variation-settings:
    	"wdth" 125;
}
.home-link:link:not(:hover) {
	text-decoration: none;
}

/* Nav */
.nav {
	display: flex;
	gap: .5em 1em;
	padding: 0;
	margin: 0;
	list-style: none;
}
.nav-item {
	display: inline-block;
}
.nav-item a[href]:not(:hover) {
	text-decoration: none;
}
.nav a[href][aria-current="page"] {
	text-decoration: underline;
}

/* Nav in footer */
.nav-footer {
	justify-content: center;
}


/* Posts list */
.postlist {
	list-style: none;
	padding: 0;
	padding-left: 1.5rem;
}
.postlist-item {
	display: flex;
	flex-wrap: wrap;
	align-items: baseline;
	counter-increment: start-from -1;
	margin-bottom: 1em;
}
.postlist-item:before {
	display: inline-block;
	pointer-events: none;
	content: "" counter(start-from, decimal-leading-zero) ". ";
	line-height: 100%;
	text-align: right;
	margin-left: -1.5rem;
}

.postlist-item:before {
	font-size: 0.8125em; /* 13px /16 */
	color: var(--color-gray-50);
}
.postlist-date {
	word-spacing: -0.5px;
}
.postlist-link.postlist-header {
	font-size: 1.1875em; /* 19px /16 */
	font-weight: 700;
	line-height: 100%;
	flex-basis: calc(100% - 1.5rem);
	text-underline-position: from-font;
	text-underline-offset: 0;
	text-decoration-thickness: 1px;
}
.postlist-item-active .postlist-link {
	font-weight: bold;
}

.postlist-header, .postlist-description {
	flex-basis: calc(100% - 1.5rem);
	padding-left: 0.25em;
	padding-right: 0.5em;
}

/* Tags */
.post-tag {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	text-transform: capitalize;
	font-weight: 400;
}
.postlist-item > .post-tag {
	align-self: center;
}

/* Tags list */
.post-metadata {
	font-size: 0.8rem;
	display: inline-flex;
	flex-wrap: wrap;
	gap: .5em;
	list-style: none;
	padding: 0;
	margin: 0;
}

.post-metadata .label {
	color: var(--color-gray-20);
}

.post-metadata time, .postlist-item time, .postlist-item .postlist-separator, .post-metadata .post-metadata-separator {
	margin-right: 0.5em;
}

.post-metadata .post-metadata-separator::before, .postlist-separator::before {
	content: "\2022";
}

/* YouTube iFrame */
iframe.yt-shortcode {
	height: 50vw;
	margin: 1rem 0;
	max-height: 25rem;
	width: 100%;
}

blockquote {
	border-left: 2px solid var(--text-color-link);
	margin-left: 0;
	padding: 1em;
	color: var(--text-color);
	background: var(--background-color-overlay);
}

section.intro {
	font-size: 1.2rem;
	background-color: var(--background-color-overlay);
	padding: 1em;
}
section.intro p {
	line-height: 160%;
}

/* setting the legend text to center */
dark-mode-toggle::part(legend) { margin: 0 auto; }

